--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,47 @@
+# Outputs
+bin/
+
+# Makefile hint files
+__DEBUG
+__RELEASE
+
+# VSCode
+.vscode
+
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+
 # Download caches
 cache
 
